# ml-bikeshare-streamlit

./: .gitattributes  README.md  requirements.txt  setup.cfg
artifacts/dt_model/: DecisionTree_2024-09-25_07-10-59.pkl  DecisionTree_metrics.json
artifacts/rf_model/: RandomForest_2024-09-25_07-11-02.pkl  RandomForest_metrics.json
artifacts/xgb_model/: XGBoost_2024-09-27_15-36-43.pkl  XGBoost_metrics.json
bikeshare/configs/: config.py
bikeshare/dataloader/: dataloader.py
bikeshare/executor/: inferrer.py  trainer.py
bikeshare/model/: base_model.py  bikeshare_model.py
bikeshare/utils/: config.py  postprocessing.py
data/raw/: SeoulBikeData_cleaned_cols.csv
scripts/: main.py
streamlit/: app.py
streamlit/utils/: supportFunc.py
