[metadata]
name = bikeshare
version = 1.0
author = Surya Prakash Madichetti
author_email = surya96t@gmail.com
description = A package to analyze and predict bike share data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = bikeshare 